Your commit message

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<script>
 			<title>WV-Notation-Cloud Home</title>
-		</script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../static/main.css" />
@@ -44,7 +42,7 @@
 								<li class="icon brands fa-googlesite"><a href="https://sites.google.com/ipsd.org/chessteam/home">sites.google.com/ipsd.org/chessteam/home</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>Developed by Drona Thoka, 2025</li>
+								<li>Developed by Drona Thoka & Christian Cheng, 2025</li>
 							</ul>
 						</div>
 					</section>
