--- a/static/main.css
+++ b/static/main.css
@@ -6,88 +6,7 @@
 	justify-content:  center;
 	align-items: center;
 }
-/*
 
- CSS for the main interaction
-*/
-/* .accordion > input[type="checkbox"] {
-  position: absolute;
-  left: -100vw;
-}
-
-.accordion .content {
-  overflow-y: hidden;
-  height: 0;
-  transition: height 0.3s ease;
-}
-
-.accordion > input[type="checkbox"]:checked ~ .content {
-  height: auto;
-  overflow: visible;
-}
-
-.accordion label {
-  display: block;
-} */
-/*
-
-.accordion {
-  margin-bottom: 1em;
-}
-
-.accordion > input[type="checkbox"]:checked ~ .content {
-  padding: 15px;
-  border: 1px solid #e8e8e8;
-  border-top: 0;
-}
-
-.accordion .handle {
-  margin: 0;
-  font-size: 1.125em;
-  line-height: 1.2em;
-}
-
-.accordion label {
-  color: #333;
-  cursor: pointer;
-  font-weight: normal;
-  padding: 15px;
-  background: #e8e8e8;
-}
-
-.accordion label:hover,
-.accordion label:focus {
-  background: #d8d8d8;
-}
-
-.accordion .handle label:before {
-  font-family: 'fontawesome';
-  content: "\f054";
-  display: inline-block;
-  margin-right: 10px;
-  font-size: .58em;
-  line-height: 1.556em;
-  vertical-align: middle;
-}
-
-.accordion > input[type="checkbox"]:checked ~ .handle label:before {
-  content: "\f078";
-}
-
-.accordion {
-  max-width: 65em;
-}
-
-.accordion p:last-child {
-  margin-bottom: 0;
-}
-
-.collapsible-content {
-  padding: 0 18px;
-  display: none;
-  overflow: hidden;
-  background-color: #f1f1f1;
-} */
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -4268,6 +4187,6 @@ input, select, textarea {
 
 	/*FIX DATE PLACEHOLDER COLORING ISSUE*/
 	.dateUpload::placeholder {
-		color: black; /* Change this to your desired color */
-		opacity: 1; /* Ensure full opacity for the placeholder */
+		color: black; 
+		opacity: 1; 
 	}
