--- a/templates/notationCloud.html
+++ b/templates/notationCloud.html
@@ -27,6 +27,18 @@
 							</div>
 						</header>
 
+						<section class="accordion">
+							<h2 class="handle">
+								<ul class="actions fit">
+									<li><a class="button fit" id="button-analysis" style="width: 1240px; display: block; margin-left: auto; margin-right: auto;" onclick="">Show Analysis</a></li>
+								</ul>
+								
+								<div id="analysis-board" class="accordion-content" style="display:none">
+									<iframe src="https://lichess.org/analysis/standard#0" style="width: 100%; height: 100%; aspect-ratio: 20/8.3;" allowtransparency="true" frameborder="0"></iframe>
+									</div>
+							</h2>
+						</section>
+
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
@@ -100,6 +112,8 @@
 																	<option>Conference</option>
 																	<option>Sectionals</option>
 																	<option>State</option>
+																	<option>USCF</option>
+																	<option>Other</option>
 																</select>
                                                             </td>
                                                             <td>
