minor format changes + testing

--- a/templates/notationCloud.html
+++ b/templates/notationCloud.html
@@ -171,7 +171,7 @@
 								<li class="icon brands fa-googlesite"><a href="https://sites.google.com/ipsd.org/chessteam/home">sites.google.com/ipsd.org/chessteam/home</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>Drona Thoka, 2025</li>
+								<li>Drona Thoka, Chirstian Cheng 2025</li>
 							</ul>
 						</div>
 					</section>
