prototype search feature

--- a/templates/notationCloud.html
+++ b/templates/notationCloud.html
@@ -119,9 +119,9 @@
 					<section>
 						<h3 class="major">Games: </h3>
 						
+						<!--Search feature-->
 						<form method="GET" action="{{ url_for('notationCloud') }}">
     						<input type="text" name="query" placeholder="Search by player, event, etc." required>
-    						<button type="submit">Search</button>
 						</form>
 						
 						<div class="table-wrapper">
