added clear button

--- a/templates/notationCloud.html
+++ b/templates/notationCloud.html
@@ -130,7 +130,7 @@
 									<th><input type="text" name="black-query" placeholder="Black"></th>
 									<th><input type="text" name="result-query" placeholder="Result"></th>
 									<th><input type="text" name="wvwin-query" placeholder="WV-W"></th>
-									<th><input type="text" name="clear-search-button" placeholder="CLEAR     "></th>
+									<th><button type="button" id ="clear-search-button" name="clear-search-button">Clear   </button></th>
 								</tr>
 							</table>
 						</form>
