--- a/templates/notationCloud.html
+++ b/templates/notationCloud.html
@@ -82,7 +82,7 @@
                                                                 </select>
                                                             </td>
                                                             <td>
-                                                                <input id="dateUpload" name="dateUpload" class="dateUpload" placeholder="Date: MM/DD/YY" type="date">
+                                                                <input id="dateUpload" name="dateUpload" class="dateUpload" placeholder="Date: MM/DD/YY" type="date" style="color:black;">
                                                             </td>
                                                         </tr>
 														<tr>
@@ -97,7 +97,7 @@
                                                             <td>
 																<select id="eventUpload" name="eventUpload">
 																	<option disabled selected>Event</option>
-																	<option>Freindly</option>
+																	<option>Friendly</option>
 																	<option>DVC</option>
 																	<option>Conference</option>
 																	<option>Sectionals</option>
