--- a/templates/games_table.html
+++ b/templates/games_table.html
@@ -15,8 +15,7 @@
         </thead>
         <tbody>
             {% for row in rows%}
-            <tr>
-                <td style="display: none;" id = "game_id">{{row["id"]}}</td>
+            <tr data-game-id="{{ row.id }}">
                 <!--Date-->
                 <td>{{row["date"]}}</td>
                 <!--Event-->
@@ -35,6 +34,7 @@
                 <td><a href="{{ url_for('download', filename=row['png_file_name']) }}">{{row["png_file_name"]}}</a></td>
                 <!--PGN-->
                 <td><a href="{{ url_for('download', filename=row['pgn_file_name']) }}">{{row["pgn_file_name"]}}</a></td>
+                <td><button type="button" data-id="{{ row.id }}" class="delete-button">🗑️</button></td>
             </tr>
             {% endfor %}
         </tbody>
