added github link

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@
 					<section id="footer">
 						<div class="inner">
 								<li class="icon brands fa-googleform"><a href="https://docs.google.com/forms/d/e/1FAIpQLSc5szMg0cYiIGk4Ag_sKxZNtgDDBIs_xo1XF2kWLyMQdx_yMg/viewform?usp=sharing&ouid=108822357969581922978">Feedback form</a></li>
+								<li class="icon brands fa-github"><a href="https://github.com/Drona-Thoka/Notation-Cloud-Prototype">Github Repo</a></li>								
 								<li class="icon brands fa-instagram"><a href="http://instagram.com/wvhschess">instagram.com/wvhschess</a></li>
 								<li class="icon brands fa-googlesite"><a href="https://sites.google.com/ipsd.org/chessteam/home">sites.google.com/ipsd.org/chessteam/home</a></li>
 							</ul>
