--- a/templates/notationCloud.html
+++ b/templates/notationCloud.html
@@ -158,7 +158,7 @@
 								</thead>
 								<tbody>
 									{% for row in rows%}
-            						<tr data-game-id="{{ row.id }}">
+            						<tr class="{% if loop.index > 20 %}hidden-row{% endif %}" data-game-id="{{ row.id }}">
 										<!--Date-->
 										<td>{{row["date"]}}</td>
 										<!--Event-->
@@ -182,6 +182,9 @@
 									{% endfor %}
 								</tbody>
 							</table>
+						</div>
+						<div id="load-more-wrapper" style="text-align: center; margin-top: 1em;">
+  							<button id="load-more-btn" class="button small">Load More</button>
 						</div>
 					</section>
 
