--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,9 @@
 							<h2>Waubonsie Valley Chess Team</h2>
 							<p>The website for storage and further analysis</p>
 						</div>
+						
+						<!--FIX IN NEXT SESSION, make sure to fix anncounment embedding-->
+						<iframe class="announcements" src="https://docs.google.com/document/d/e/2PACX-1vSFWwUMciyFD26eYy-DLDF5AGLyQTsOcrmGCyxvm7w6g8gdOL-uawP2-ILc8a2twtvDnOo-JVbYE1tG/pub?embedded=true"></iframe>
 
 				<!-- Wrapper -->
 					<section id="wrapper">
