--- a/static/main.css
+++ b/static/main.css
@@ -4220,8 +4220,15 @@ input, select, textarea {
 	}
 
 	/*FIX IN NEXT SESSION, STYLE FOR ANNCOUNEMNT EMBEDDING*/
+	.announcement-box{
+		max-width: 900px;
+  		margin: 0 auto;
+  		padding: 2rem;
+	}
 	.announcements{
-		display: flex;
-		height: 400px;
-		width: 200px;
+ 		width: 100%;
+  		height: 300px;
+  		border: none;
+		box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+		border-radius: 8px;	
 	}
