--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,15 @@
 
 				<!-- Banner -->
 						<div class="inner">
-							<h2>Waubonsie Valley Chess Team</h2>
+							<h2 style="font-size: 50px;">Waubonsie Valley Chess Team</h2>
 							<p>The website for storage and further analysis</p>
 						</div>
 						
 						<!--FIX IN NEXT SESSION, make sure to fix anncounment embedding-->
-						<iframe class="announcements" src="https://docs.google.com/document/d/e/2PACX-1vSFWwUMciyFD26eYy-DLDF5AGLyQTsOcrmGCyxvm7w6g8gdOL-uawP2-ILc8a2twtvDnOo-JVbYE1tG/pub?embedded=true"></iframe>
-
+						<h3 style="text-align: center; margin-top: 2rem;">Coach Announcements & Schedule</h3>
+						<div class="announcement-box">
+							<iframe class="announcements" src="https://docs.google.com/document/d/e/2PACX-1vSFWwUMciyFD26eYy-DLDF5AGLyQTsOcrmGCyxvm7w6g8gdOL-uawP2-ILc8a2twtvDnOo-JVbYE1tG/pub?embedded=true"></iframe>
+						</div>
 				<!-- Wrapper -->
 					<section id="wrapper">
 							<section id="one" class="wrapper spotlight style1">
