--- a/templates/notationCloud.html
+++ b/templates/notationCloud.html
@@ -90,7 +90,7 @@
 																<p>Upload PNG:</p><input type="file" name="pngUpload" id="pngUpload">
 															</td>
 															<td>
-																<p>Upload PGN:</p><input type="file" name="pgnUpload" id="pgnUpload">
+																<p>Upload PGN:</p><input type="file" name="pgnUpload" id="pgnUpload"> <button>PGN Maker</button>
 															</td>
 														</tr>
                                                         <tr>
