--- a/templates/notationCloud.html
+++ b/templates/notationCloud.html
@@ -90,7 +90,7 @@
 																<p>Upload PNG:</p><input type="file" name="pngUpload" id="pngUpload">
 															</td>
 															<td>
-																<p>Upload PGN:</p><input type="file" name="pgnUpload" id="pgnUpload"> <button>PGN Maker</button>
+																<p>Upload PGN:</p><input type="file" name="pgnUpload" id="pgnUpload"> <button type="button" onclick="openPgnMaker">PGN Maker</button>
 															</td>
 														</tr>
                                                         <tr>
@@ -107,7 +107,7 @@
 																</select>
                                                             </td>
                                                             <td>
-                                                                <button type="button" name="uploadSubmitButton" onclick="javascript: checkSubmit();">Submit</button>
+                                                                <button type="submit" name="uploadSubmitButton" onclick="javascript: checkSubmit();">Submit</button>
                                                             </td>
                                                         </tr>
                                                     </tbody>
